--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 					<!-- Logo -->
 						<div id="logo">
-							<span class="image avatar48"><img src="images/avatar.jpg" alt="" /></span>
+							<span class="image avatar48"><img src="images/ProfilePicture.jpg" alt="" /></span>
 							<h1 id="title">Kyle Frost</h1>
 							<p>Games Developer</p>
 						</div>
