Added more detail to portfolio.

--- a/index.html
+++ b/index.html
@@ -385,13 +385,22 @@
 
 					   <div class="description-box">
 					      <h4>The Descent</h4>		      
-					      <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
+					      <p>A 3-week Game Jam based on a given theme - "A horror game where you explore dungeons full of trolls and loot sweet gear."
+						  <br><br>
+						  This game jam features randomly generated dungeons with varying designed rooms, created so each run will feel unique in it's design.
+						  Equipped with a bow and elemental arrows, you can take down enemies to spawn randomised loot with power tiers - making you more powerful as
+						  you push through each floor of the dungeon. At the end of each dungeon floor is a boss with unique attacks to provide an extra challenge.
+						  <br><br>
+						  <b>Unity Development / C# Programming</b><br>
+						  <b>Randomised Room/Dungeon Spawning</b><br>
+						  <b>Randomised Tier-Based Loot System</b><br>
+						  </p>
 
 					      <div class="categories">Unity Game Jam - Roguelike Dungeon Crawler</div>			               
 					   </div>
 
 			         <div class="link-box">
-			            <a href="http://www.behance.net">Details</a>
+			            <a href="TheDescent.html">Details</a>
 					      <a href="#" class="popup-modal-dismiss">Close</a>
 			         </div>		      
 
@@ -405,7 +414,15 @@
 
 					   <div class="description-box">
 					      <h4>ASGETrek</h4>		      
-					      <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
+					      <p>A C++ remake of classic game "EGA Trek", made using a custom engine (ASGE).
+						  <br><br>
+						  ASGETrek utilises text-based input to control your space ship through a 64 quadrant galaxy. Jump through sectors to find and eliminate Mongol threats to the USS Lexington,
+						  using torpedos to shoot down enemy ships. Manage resources to keep yourself alive, and make use of friendly starships to refill resources. A dynamic notifcation section will 
+						  alert you to combat and movement information.
+						  <br><br>
+						  <b>C++ Programming</b><br>
+						  <b>Awesomesauce Game Engine</b><br>
+						  </p>
 
 					      <div class="categories">C++ Development</div>			               
 					   </div>
@@ -425,8 +442,15 @@
 
 					   <div class="description-box">
 					      <h4>DirectX FPS</h4>		      
-					      <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
-
+					      <p>A first person shooter developed in C++ using DirectX.
+						  <br><br>
+						  This basic FPS game includes collision detection, billboard enemies and shooting mechanics made from scratch. Cubes are loaded in individually and texture mapped
+						  to create a level, with their positions, and thus the level design, decided using a text file. Collision detection was created byy comparing vertex data to create a
+						  basic FPS game from scratch.
+						  <br><br>
+						  <b>C++ Programming</b><br>
+						  <b>DirectX 11</b><br>
+						  </p>
 					      <div class="categories">C++ DirectX Development</div>			               
 					   </div>
 
@@ -444,9 +468,20 @@
 				     	</div>      	
 
 					   <div class="description-box">
-					      <h4>Duality</h4>		      
-					      <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
-
+					      <h4>Duality</h4>	
+						  <p>A 1-week Game Jam for the 2022 Global Game Jam with the theme "Duality".
+						  <br><br>
+						  Using Photon for Unity, this game jam features a functional lobby system, allowing users to create and name rooms to host private games. 
+						  Other players can browse open rooms and join from a list in the menu. The host of the game also has the options to change gamemode and map for that specific game.
+						  <br><br>
+						  Our FPS game features multiple different weapons, including hitscan and projectile. The weapon system is modular, using Scriptable Objects to manage weapon data, 
+						  created 2 different gamemodes - a typical deathmatch and a "looter-shooter mode", as well as 2 different maps to play on. Weapons models although basic, were created
+						  myself using Unity cubes and emmisive materials to appeal to a futuristic theme.
+						  <br><br>
+						  <b>Unity Development / C# Programming</b><br>
+						  <b>Networked Multiplayer - Photon</b><br>
+						  <b>Modular Weapon System</b><br>
+						  </p>
 					      <div class="categories">Unity Game Jam - Multiplayer FPS</div>			               
 					   </div>
 
@@ -465,8 +500,19 @@
 
 					   <div class="description-box">
 					      <h4>Hidden in Plain Sight</h4>		      
-					      <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
-
+					      <p>A C++ game created on the theme "Hacking", using the custom ASGE engine.
+						  <br><br>
+						  Hidden in Plain Sight is a party game created with heavy inspiration from Adam Spragg's console game of the same name.
+						  The game is local multiplayer, with one player playing as the hacker, and the other as police. The role of the hacker is to hack all 5 terminals
+						  without being detected, whilst the job of the police is to find and eliminate the hacker without harming too many civilians. 
+						  <br><br>
+						  The game scene has many wandering AI to allow the hacker to blend in, and make it harder for the police to track down the hacker. But the terminals will light up when
+						  hacked to help the police narrow down their search. Utilising smoke grenades and masking their human movement is important for the hacker to evade, whilst marking innocent 
+						  civilians will allow the police to close in on the hacker.
+						  <br><br>
+						  <b>C++ Development</b><br>
+						  <b>Awesomesauce Game Engine</b><br>
+						  </p>
 					      <div class="categories">C++ Development</div>			               
 					   </div>
 
@@ -485,8 +531,20 @@
 
 					   <div class="description-box">
 					      <h4>Kojima Wars</h4>		      
-					      <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
-
+					      <p>A cohort Unity FPS/RTS game based around the classic game "Herzog Zwei".
+						  <br><br>
+						  Kojima wars is a FPS and RTS hybrid, with mech-based combat including various weapons and multiple skill/perk trees to provide players with different playstyle options.
+						  The game also features RTS elements, including base capture and defending. These bases earn currency in which you can spend on base defences, or AI units to deploy. A mix
+						  of combat skill and intelligence is important to succeed.
+						  <br><br>
+						  Movement is based around the classic Herzog Zwei game, with the mech able to transform from mech to VTOL, allowing the player to fly around the map and attack bases from
+						  different angles. The rules of the game are classic domination - capture bases to earn points on a ticker, and the team who reaches the score limit first, wins!
+						  <br><br>
+						  Our team, Foundation Games, was in charge of the weapon system and abilties.
+						  <br><br>
+						  <b>Unity Development / C# Programming</b><br>
+						  <b>Cohort Project</b><br>
+						  </p>
 					      <div class="categories">Cohort Project</div>			               
 					   </div>
 
