--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 	<style>
 * {box-sizing: border-box}
 body {font-family: Verdana, sans-serif; margin:0}
-.mySlides1, .mySlides2, .mySlides3, .mySlides4, .mySlides5, .mySlides6 {display: none}
+.mySlides1, .mySlides2, .mySlides3, .mySlides4, .mySlides5, .mySlides6, .mySlides7 {display: none}
 img {vertical-align: middle;}
 
 /* Slideshow container */
@@ -468,6 +468,22 @@ img {vertical-align: middle;}
 	               </div>
 	        		</div> <!-- /folio-item -->   
 
+				<div class="bgrid folio-item">
+	               <div class="item-wrap">
+	               	<img src="images/portfolio/UnrealLevel-Main.jpg" alt="UnrealLevelDesign">
+	                  <a href="#modal-07" class="overlay">
+	                     <div class="folio-item-table">
+	                     	<div class="folio-item-cell">
+	                     		<h3 class="folio-title">Unreal Puzzle Platformer</h3>	     					    
+		     					    	<span class="folio-types">
+		     					       	  Unreal Engine Level Design
+		     					      </span>		     		
+		     					   </div>	                      	
+	                     </div>                    
+	                  </a>
+	               </div>
+	        	</div> <!-- /folio-item --> 
+
 	            <!-- modal popups - begin
 	            ============================================================= -->
 	            <div id="modal-01" class="popup-modal slider mfp-hide">	
@@ -524,7 +540,6 @@ img {vertical-align: middle;}
 					   </div>
 
 			         <div class="link-box">
-			            <a href="TheDescent.html">Details</a>
 					    <a href="#" class="popup-modal-dismiss">Close</a>
 			         </div>		      
 
@@ -590,7 +605,7 @@ img {vertical-align: middle;}
 					   </div>
 
 			         <div class="link-box">
-			            <a href="ASGETrek.html">Details</a>
+			            <!--<a href="ASGETrek.html">Details</a>-->
 					      <a href="#" class="popup-modal-dismiss">Close</a>
 			         </div>		      
 
@@ -635,7 +650,6 @@ img {vertical-align: middle;}
 					   </div>
 
 			         <div class="link-box">
-			            <a href="DirectXFPS.html">Details</a>
 					      <a href="#" class="popup-modal-dismiss">Close</a>
 			         </div>		      
 
@@ -696,7 +710,6 @@ img {vertical-align: middle;}
 					   </div>
 
 			         <div class="link-box">
-			            <a href="Duality.html">Details</a>
 					      <a href="#" class="popup-modal-dismiss">Close</a>
 			         </div>		      
 
@@ -752,7 +765,6 @@ img {vertical-align: middle;}
 					   </div>
 
 			         <div class="link-box">
-			            <a href="Hidden.html">Details</a>
 					      <a href="#" class="popup-modal-dismiss">Close</a>
 			         </div>		      
 
@@ -824,11 +836,80 @@ img {vertical-align: middle;}
 					   </div>
 
 			         <div class="link-box">
-			            <a href="KojimaWars.html">Details</a>
 					      <a href="#" class="popup-modal-dismiss">Close</a>
 			         </div>		      
 
-				   </div> <!-- /modal-06 -->
+				   </div> <!-- /modal-07 -->
+
+				    <div id="modal-07" class="popup-modal slider mfp-hide">	
+
+				     	<div class="media">
+
+							<div class="slideshow-container">
+
+								<!-- Full-width images with number and caption text -->
+
+								<div class="mySlides7 fade">
+									<div class="numbertext">1 / 6</div>
+									<img src="images/portfolio/UnrealLevel-Main.jpg" style="width:100%">
+								</div>
+
+								<div class="mySlides7 fade">
+									<div class="numbertext">2 / 6</div>
+									<img src="images/portfolio/UnrealLevel-NPC.jpg" style="width:100%">
+									<div class="text">NPC Interaction</div>
+								</div>
+
+								<div class="mySlides7 fade">
+									<div class="numbertext">3 / 6</div>
+									<img src="images/portfolio/UnrealLevel-Gate.jpg" style="width:100%">
+									<div class="text">Combination Puzzle</div>
+								</div>
+
+								<div class="mySlides7 fade">
+									<div class="numbertext">4 / 6</div>
+									<img src="images/portfolio/UnrealLevel-Powerup.jpg" style="width:100%">
+									<div class="text">Various powerups</div>
+								</div>
+
+								<div class="mySlides7 fade">
+									<div class="numbertext">5 / 6</div>
+									<img src="images/portfolio/UnrealLevel-Terraform.jpg" style="width:100%">
+									<div class="text">Terraformed environment</div>
+								</div>
+
+								<div class="mySlides7 fade">
+									<div class="numbertext">6 / 6</div>
+									<img src="images/portfolio/UnrealLevel-Destructable.jpg" style="width:100%">
+									<div class="text">Destructable Objects</div>
+								</div>
+
+								<!-- Next and previous buttons -->
+								<a class="prev" onclick="plusSlides(-1, 6)">&#10094;</a>
+								<a class="next" onclick="plusSlides(1, 6)">&#10095;</a>
+							</div>
+
+				     	</div>       	
+
+					   <div class="description-box">
+					      <h4>Unreal Engine Puzzle Platformer</h4>		      
+					      <p>A puzzle game with platforming elements created in Unreal using blueprints for a Level Design assignment.
+						  <br><br>
+						  This game features various puzzles and powerups required to progress through the game, concluding in a time trial sprint back to the start to escape
+						  the collapsing world. Powerups include a double jump, dash and Aether Shroud - a teleport ability to enter the Aether world where paths and puzzle pieces
+						  reveal themselves.
+						  <br><br>
+						  <b>Unreal Development / Blueprints</b><br>
+						  <b>Level Design Assignment</b><br>
+						  </p>
+					      <div class="categories">Unreal Engine</div>			               
+					   </div>
+
+			         <div class="link-box">
+					    <a href="#" class="popup-modal-dismiss">Close</a>
+			         </div>		      
+
+				   </div> <!-- /modal-07 -->
 
 
 				   <!-- modal popups - end
@@ -950,13 +1031,14 @@ img {vertical-align: middle;}
    <script>
 		let slideIndex = [];
 		/* Class the members of each slideshow group with different CSS classes */
-		let slideId = ["mySlides1", "mySlides2", "mySlides3", "mySlides4", "mySlides5", "mySlides6"]
+		let slideId = ["mySlides1", "mySlides2", "mySlides3", "mySlides4", "mySlides5", "mySlides6", "mySlides7"]
 		showSlides(1, 0);
 		showSlides(1, 1);
 		showSlides(1, 2);
 		showSlides(1, 3);
 		showSlides(1, 4);
 		showSlides(1, 5);
+		showSlides(1, 6);
 
 		function plusSlides(n, no) {
 		  showSlides(slideIndex[no] += n, no);
