--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 	<style>
 * {box-sizing: border-box}
 body {font-family: Verdana, sans-serif; margin:0}
-.mySlides1, .mySlides2, .mySlides3, .mySlides4, .mySlides5, .mySlides6, .mySlides7 {display: none}
+.mySlides1, .mySlides2, .mySlides3, .mySlides4, .mySlides5, .mySlides6, .mySlides7, .mySlides8, .mySlides9 {display: none}
 img {vertical-align: middle;}
 
 /* Slideshow container */
@@ -372,6 +372,8 @@ img {vertical-align: middle;}
    			<!-- portfolio-wrapper -->
 	         <div id="folio-wrapper" class="block-1-2 block-mob-full stack">
 
+			 <!--TheDescent-->
+
 	         	<div class="bgrid folio-item">
 	               <div class="item-wrap">
 	               	<img src="images/portfolio/TheDescent.jpg" alt="TheDescent">
@@ -386,72 +388,10 @@ img {vertical-align: middle;}
 	                     </div>                    
 	                  </a>
 	               </div>	               
-	        		</div> <!-- /folio-item -->
+				</div> <!-- /folio-item -->
+			 <!--TheDescent-->
 
-	        		<div class="bgrid folio-item">
-	               <div class="item-wrap">
-	               	<img src="images/portfolio/ASGETrek.jpg" alt="ASGETrek">
-	               	<a href="#modal-02" class="overlay">              		                  
-	                     <div class="folio-item-table">
-	                     	<div class="folio-item-cell">
-	                     		<h3 class="folio-title">ASGETrek</h3>	     					    
-		     					    	<span class="folio-types">
-		     					       	  C++ Development
-		     					      </span>		     		
-		     					   </div> 	                      	
-	                     </div>                    
-	                  </a>
-	               </div>
-	        		</div> <!-- /folio-item -->
-
-	            <div class="bgrid folio-item">
-	               <div class="item-wrap">
-	               	<img src="images/portfolio/DirectXFPS.jpg"alt="DirectX FPS">
-	                  <a href="#modal-03" class="overlay">             		                  
-	                     <div class="folio-item-table">
-	                     	<div class="folio-item-cell">
-	                     		<h3 class="folio-title">DirectX FPS</h3>	     					    
-		     					    	<span class="folio-types">
-		     					       	  C++ DirectX Development
-		     					      </span>		     		
-		     					   </div> 	                      	
-	                     </div>                    
-	                  </a>
-	               </div>
-	        		</div> <!-- /folio-item -->
-
-	            <div class="bgrid folio-item">
-	               <div class="item-wrap">
-	               	<img src="images/portfolio/Duality.jpg" alt="Duality">
-	                  <a href="#modal-04" class="overlay">                  	                 
-	                     <div class="folio-item-table">
-	                     	<div class="folio-item-cell">
-	                     		<h3 class="folio-title">Duality</h3>	     					    
-		     					    	<span class="folio-types">
-		     					       	  Unity Game Jam - Multiplayer FPS
-		     					      </span>		     		
-		     					   </div>  	                      	
-	                     </div>                    
-	                  </a>
-	               </div>
-	        		</div> <!-- /folio-item -->     
-
-	        		<div class="bgrid folio-item">
-	               <div class="item-wrap">
-	               	<img src="images/portfolio/Hidden.jpg" alt="Hidden">
-	                  <a href="#modal-05" class="overlay">             		                  
-	                     <div class="folio-item-table">
-	                     	<div class="folio-item-cell">
-	                     		<h3 class="folio-title">Hidden in Plain Sight</h3>	     					    
-		     					    	<span class="folio-types">
-		     					       	  C++ Development
-		     					      </span>		     		
-		     					   </div> 	                      	
-	                     </div>                    
-	                  </a>
-	               </div>
-	        		</div> <!-- /folio-item -->
-
+			 <!--KojimaWars-->
 	            <div class="bgrid folio-item">
 	               <div class="item-wrap">
 	               	<img src="images/portfolio/KojimaChaos.jpg" alt="KojimaWars">
@@ -466,8 +406,118 @@ img {vertical-align: middle;}
 	                     </div>                    
 	                  </a>
 	               </div>
-	        		</div> <!-- /folio-item -->   
+	        		</div> <!-- /folio-item -->  
+			 <!--KojimaWars-->
 
+			 <!--MLAgents-->
+				<div class="bgrid folio-item">
+	               <div class="item-wrap">
+	               	<img src="images/portfolio/ML-Main.jpg" alt="MLAgents">
+	                  <a href="#modal-09" class="overlay">
+	                     <div class="folio-item-table">
+	                     	<div class="folio-item-cell">
+	                     		<h3 class="folio-title">ML Agents - Social Deduction</h3>	     					    
+		     					    	<span class="folio-types">
+		     					       	  Unity ML Agents
+		     					      </span>		     		
+		     					   </div>	                      	
+	                     </div>                    
+	                  </a>
+	               </div>
+	        	</div> <!-- /folio-item -->
+			 <!--MLAgents-->
+
+			 <!--DirectXFPS-->
+	            <div class="bgrid folio-item">
+	               <div class="item-wrap">
+	               	<img src="images/portfolio/DirectXFPS-resized.jpg"alt="DirectX FPS">
+	                  <a href="#modal-03" class="overlay">             		                  
+	                     <div class="folio-item-table">
+	                     	<div class="folio-item-cell">
+	                     		<h3 class="folio-title">DirectX FPS</h3>	     					    
+		     					    	<span class="folio-types">
+		     					       	  C++ DirectX Development
+		     					      </span>		     		
+		     					   </div> 	                      	
+	                     </div>                    
+	                  </a>
+	               </div>
+	        		</div> <!-- /folio-item -->
+			 <!--DirectXFPS-->
+			 
+			 <!--OpenWorld-->
+				<div class="bgrid folio-item">
+	               <div class="item-wrap">
+	               	<img src="images/portfolio/OpenWorld-Main.jpg" alt="OpenWorld">
+	                  <a href="#modal-08" class="overlay">
+	                     <div class="folio-item-table">
+	                     	<div class="folio-item-cell">
+	                     		<h3 class="folio-title">Open World Streaming System</h3>	     					    
+		     					    	<span class="folio-types">
+		     					       	  Open World Streaming
+		     					      </span>		     		
+		     					   </div>	                      	
+	                     </div>                    
+	                  </a>
+	               </div>
+	        	</div> <!-- /folio-item -->
+			 <!--OpenWorld-->
+
+			 <!--Duality-->
+	            <div class="bgrid folio-item">
+	               <div class="item-wrap">
+	               	<img src="images/portfolio/Duality-resized.jpg" alt="Duality">
+	                  <a href="#modal-04" class="overlay">                  	                 
+	                     <div class="folio-item-table">
+	                     	<div class="folio-item-cell">
+	                     		<h3 class="folio-title">Duality</h3>	     					    
+		     					    	<span class="folio-types">
+		     					       	  Unity Game Jam - Multiplayer FPS
+		     					      </span>		     		
+		     					   </div>  	                      	
+	                     </div>                    
+	                  </a>
+	               </div>
+	        		</div> <!-- /folio-item -->    
+			 <!--Duality-->
+
+			 <!--Hidden in Plain Sight-->
+	        	<div class="bgrid folio-item">
+	               <div class="item-wrap">
+	               	<img src="images/portfolio/Hidden.jpg" alt="Hidden">
+	                  <a href="#modal-05" class="overlay">             		                  
+	                     <div class="folio-item-table">
+	                     	<div class="folio-item-cell">
+	                     		<h3 class="folio-title">Hidden in Plain Sight</h3>	     					    
+		     					    	<span class="folio-types">
+		     					       	  C++ Development
+		     					      </span>		     		
+		     					   </div> 	                      	
+	                     </div>                    
+	                  </a>
+	               </div>
+	        		</div> <!-- /folio-item -->
+			 <!--Hidden in Plain Sight-->
+
+			 <!--ASGETrek-->
+	        	<div class="bgrid folio-item">
+	               <div class="item-wrap">
+	               	<img src="images/portfolio/ASGETrek.jpg" alt="ASGETrek">
+	               	<a href="#modal-02" class="overlay">              		                  
+	                     <div class="folio-item-table">
+	                     	<div class="folio-item-cell">
+	                     		<h3 class="folio-title">ASGETrek</h3>	     					    
+		     					    	<span class="folio-types">
+		     					       	  C++ Development
+		     					      </span>		     		
+		     					   </div> 	                      	
+	                     </div>                    
+	                  </a>
+	               </div>
+	        	</div> <!-- /folio-item -->
+			 <!--ASGETrek-->
+
+			 <!--UnrealLevelDesign-->
 				<div class="bgrid folio-item">
 	               <div class="item-wrap">
 	               	<img src="images/portfolio/UnrealLevel-Main.jpg" alt="UnrealLevelDesign">
@@ -483,6 +533,9 @@ img {vertical-align: middle;}
 	                  </a>
 	               </div>
 	        	</div> <!-- /folio-item --> 
+			 <!--UnrealLevelDesign-->
+
+
 
 	            <!-- modal popups - begin
 	            ============================================================= -->
@@ -838,8 +891,7 @@ img {vertical-align: middle;}
 			         <div class="link-box">
 					      <a href="#" class="popup-modal-dismiss">Close</a>
 			         </div>		      
-
-				   </div> <!-- /modal-07 -->
+				</div> <!-- /modal-06 -->
 
 				    <div id="modal-07" class="popup-modal slider mfp-hide">	
 
@@ -911,6 +963,125 @@ img {vertical-align: middle;}
 
 				   </div> <!-- /modal-07 -->
 
+
+				    <div id="modal-08" class="popup-modal slider mfp-hide">	
+
+				     	<div class="media">
+
+							<div class="slideshow-container">
+
+								<!-- Full-width images with number and caption text -->
+
+								<div class="mySlides8 fade">
+									<div class="numbertext">1 / 3</div>
+									<video autoplay muted loop controls> <source src="images/portfolio/OpenWorldVideo.mp4" type="video/mp4"> </video>
+								</div>
+
+								<div class="mySlides8 fade">
+									<div class="numbertext">2 / 3</div>
+									<img src="images/portfolio/OpenWorld-Main.jpg" style="width:100%">
+									<div class="text">Mesh Streaming</div>
+								</div>
+
+								<div class="mySlides8 fade">
+									<div class="numbertext">3 / 3</div>
+									<img src="images/portfolio/OpenWorld-Quest.jpg" style="width:100%">
+									<div class="text">NPC Quest System</div>
+								</div>
+
+								<!-- Next and previous buttons -->
+								<a class="prev" onclick="plusSlides(-1, 7)">&#10094;</a>
+								<a class="next" onclick="plusSlides(1, 7)">&#10095;</a>
+							</div>
+
+				     	</div>       	
+
+					   <div class="description-box">
+					      <h4>Unity Open World Streaming System</h4>		      
+					      <p>An Open World streaming system developed in Unity - loading and unloading mesh data to/from the disk.
+						  <br><br>
+						  This streaming system uses chunks to save and load mesh data to a disk, using player proximity to stream the world data in and out.
+						  Unique mesh data is converted in a serializable data class, then saved to disk using the Unity binary formatter. The data can then be
+						  deserialized and converted back to mesh data for Unity to use when needed. 
+						  <br><br>
+						  The project also uses NPCs and quests to gamify the system. NPCs will move to randomised locations around the world, and will also be loaded
+						  and unloaded when out of range of the player. A navmesh system is used to allow NPC's to move between chunks, even when they're not loaded.
+						  The quest system works by NPCs providing an object to deliver - which the player then must go and find in the world. These objects are loaded and unloaded
+						  with the chunks. Quests are tracked in HUD, and completing quests will give the player gold.
+						  <br><br>
+						  <b>Unity Development</b><br>
+						  <b>Data Streaming</b><br>
+						  </p>
+					      <div class="categories">Unity</div>			               
+					   </div>
+
+			         <div class="link-box">
+					    <a href="#" class="popup-modal-dismiss">Close</a>
+			         </div>		      
+
+				   </div> <!-- /modal-08 -->
+
+				   <div id="modal-09" class="popup-modal slider mfp-hide">	
+
+				     	<div class="media">
+
+							<div class="slideshow-container">
+
+								<!-- Full-width images with number and caption text -->
+
+								<div class="mySlides9 fade">
+									<div class="numbertext">1 / 3</div>
+									<img src="images/portfolio/ML-Main.jpg" style="width:100%">
+								</div>
+
+								<div class="mySlides9 fade">
+									<div class="numbertext">2 / 3</div>
+									<img src="images/portfolio/ML-Movement.jpg" style="width:100%">
+									<div class="text">Finding the "Imposter" through pattern recognition.</div>
+								</div>
+
+								<div class="mySlides9 fade">
+									<div class="numbertext">3 / 3</div>
+									<img src="images/portfolio/ML-Gate.jpg" style="width:100%">
+									<div class="text" style="background-color:rgba(0,0,0,0.6)">Machine Learning Cooperative Bahaviour Puzzle</div>
+								</div>
+
+								<!-- Next and previous buttons -->
+								<a class="prev" onclick="plusSlides(-1, 8)">&#10094;</a>
+								<a class="next" onclick="plusSlides(1, 8)">&#10095;</a>
+							</div>
+
+				     	</div>  
+						 
+
+					   <div class="description-box">
+					      <h4>ML Agents Social Deduction Project</h4>		      
+					      <p>A machine learning dissertation using ML Agents to determine the usefulness of machine learning in social deduction games.
+						  <br><br>
+						  This project showcases two scenarios of machine learning being used to form the foundations of a social deduction AI. The first scene
+						  showing an AI learning to pick out an "imposter" based on movement differences. The power to identify irregularities and build suspicion is essential
+						  for social deduction games, and this demo begins to prove that machine learning can be taught this with adjustable levels of accuracy. 
+						  <br><br>
+						  The second scene showing cooperative behaviour between 3 different agents all operating on the same brain. 2 agents must sacrifice themselves on buttons for 
+						  the last to reach the end goal. Teamwork and cooperation is also a significant skill of social deduction games, and this demo shows that agents can work 
+						  together to complete a common goal. Moreover, it shows that machine learning agents can reliably make decisions based on a changing environment. Despite all agents in this puzzle
+						  sharing the same brain, different agents will press different buttons, proving that each of them understand the goal, regardless of their individual role.
+						  <br><br>
+						  Whilst this project doesn't show a complete AI player, it does set foundations that can be built upon, suggesting the machine learning can be used as a tool for creating
+						  more fun and dynamic AI for games that typically don't use AI due to it's complexity. All of which can be done using a popular game engine, to further support a more 
+						  mainstream use for machine lerning in games.
+						  <br><br>
+						  <b>Unity ML Agents</b><br>
+						  <b>Machine Learning for Games AI</b><br>
+						  </p>
+					      <div class="categories">Unity/ML Agents</div>			               
+					   </div>
+
+			         <div class="link-box">
+					    <a href="#" class="popup-modal-dismiss">Close</a>
+			         </div>		      
+
+				   </div> <!-- /modal-09 -->
 
 				   <!-- modal popups - end
 	            ============================================================= -->
@@ -1031,7 +1202,7 @@ img {vertical-align: middle;}
    <script>
 		let slideIndex = [];
 		/* Class the members of each slideshow group with different CSS classes */
-		let slideId = ["mySlides1", "mySlides2", "mySlides3", "mySlides4", "mySlides5", "mySlides6", "mySlides7"]
+		let slideId = ["mySlides1", "mySlides2", "mySlides3", "mySlides4", "mySlides5", "mySlides6", "mySlides7", "mySlides8", "mySlides9"]
 		showSlides(1, 0);
 		showSlides(1, 1);
 		showSlides(1, 2);
@@ -1039,6 +1210,8 @@ img {vertical-align: middle;}
 		showSlides(1, 4);
 		showSlides(1, 5);
 		showSlides(1, 6);
+		showSlides(1, 7);
+		showSlides(1, 8);
 
 		function plusSlides(n, no) {
 		  showSlides(slideIndex[no] += n, no);
