--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@ img {vertical-align: middle;}
    	<div class="row button-section">
    		<div class="col-twelve">
    			<!--<a href="#contact" title="Hire Me" class="button stroke smoothscroll">Hire Me</a>-->
-   			<a href="#" title="Download CV" class="button button-primary">Download CV</a>
+   			<a href="DownloadFiles/KyleFrostCV.pdf" download="KyleFrostCV" title="Download CV" class="button button-primary">Download CV</a>
    		</div>   		
    	</div>
 
