--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@ img {vertical-align: middle;}
    				</li>
    				<li>
    					<strong>Email:</strong>
-   					<span>Kyle2.Frost@live.uwe.ac.uk</span>
+   					<span>frostkfd@gmail.com</span>
    				</li>
 
    			</ul> <!-- /info-list -->
