--- a/index.html
+++ b/index.html
@@ -180,7 +180,8 @@ img {vertical-align: middle;}
    	</div> <!-- /intro-content --> 
 
    	<ul class="intro-social">        
-         <li><a href="#"><i class="fa fa-github"></i></a></li>
+         <li><a href="https://github.com/Kyle-Frost" target=”_blank”><i class="fa fa-github"></i></a></li>
+         <li><a href="https://www.linkedin.com/in/kyle-frost" target=”_blank”><i class="fa fa-linkedin"></i></a></li>
       </ul> <!-- /intro-social -->      	
 
    </section> <!-- /intro -->
@@ -311,7 +312,7 @@ img {vertical-align: middle;}
 
 	   				<div class="timeline-header">
 	   					<h3>Bachelor Degree</h3>
-	   					<p>September 2018 - June 2022</p>
+	   					<p>September 2018 - July 2022</p>
 	   				</div>
 
 	   				<div class="timeline-content">
@@ -1094,68 +1095,6 @@ img {vertical-align: middle;}
 		
 	</section> <!-- /portfolio --> 
 	
-   <!-- contact
-   ================================================== -->
-	<section id="contact">
-
-		<div class="row section-intro">
-   		<div class="col-twelve">
-
-   			<h5>Contact</h5>
-   			<h1>I'd Love To Hear From You.</h1>
-
-   			<p class="lead">For more information about my work, or to simply get in contact with me, please use the form provided, or contact me via my email - Kyle2.Frost@live.uwe.ac.uk.</p>
-
-   		</div> 
-   	</div> <!-- /section-intro -->
-
-   	<div class="row contact-form">
-
-   		<div class="col-twelve">
-
-            <!-- form -->
-            <form name="contactForm" id="contactForm" method="post" action="">
-      			<fieldset>
-
-                  <div class="form-field">
- 						   <input name="contactName" type="text" id="contactName" placeholder="Name" value="" minlength="2" required="">
-                  </div>
-                  <div class="form-field">
-	      			   <input name="contactEmail" type="email" id="contactEmail" placeholder="Email" value="" required="">
-	               </div>
-                  <div class="form-field">
-	     				   <input name="contactSubject" type="text" id="contactSubject" placeholder="Subject" value="">
-	               </div>                       
-                  <div class="form-field">
-	                 	<textarea name="contactMessage" id="contactMessage" placeholder="message" rows="10" cols="50" required=""></textarea>
-	               </div>                      
-                 <div class="form-field">
-                     <button class="submitform">Submit</button>
-                     <div id="submit-loader">
-                        <div class="text-loader">Sending...</div>                             
-       				      <div class="s-loader">
-								  	<div class="bounce1"></div>
-								  	<div class="bounce2"></div>
-								  	<div class="bounce3"></div>
-								</div>
-							</div>
-                  </div>
-
-      			</fieldset>
-      		</form> <!-- Form End -->
-
-            <!-- contact-warning -->
-            <div id="message-warning">            	
-            </div>            
-            <!-- contact-success -->
-      		<div id="message-success">
-               <i class="fa fa-check"></i>Your message was sent, thank you!<br>
-      		</div>
-
-         </div> <!-- /col-twelve -->
-   		
-   	</div> <!-- /contact-form -->	
-	</section> <!-- /contact -->
 
 
    <!-- footer
@@ -1167,9 +1106,8 @@ img {vertical-align: middle;}
      		<div class="col-six tab-full pull-right social">
 
      			<ul class="footer-social">        
-			      <!--<li><a href="#"><i class="fa fa-twitter"></i></a></li>-->
-			      <!--<li><a href="#"><i class="fa fa-instagram"></i></a></li>-->
-				  <li><a href="#"><i class="fa fa-github"></i></a></li>
+				  <li><a href="https://github.com/Kyle-Frost" target=”_blank”><i class="fa fa-github"></i></a></li>
+				  <li><a href="https://www.linkedin.com/in/kyle-frost" target=”_blank”><i class="fa fa-linkedin"></i></a></li>
 			   </ul> 
 	      		
 	      </div>
@@ -1177,8 +1115,8 @@ img {vertical-align: middle;}
       	<div class="col-eight tab-full">
 	      	<div class="copyright">
 		        	<span>© Copyright 2018 </span> 
-		        	<span>Design by <a href="http://www.styleshout.com/">styleshout</a></span> 
-		        	<span>Distributed by <a href="https://themewagon.com/">themewagon</a></span>	         	
+		        	<span>Design by <a href="http://www.styleshout.com/" target=”_blank”>styleshout</a></span> 
+		        	<span>Distributed by <a href="https://themewagon.com/" target=”_blank”>themewagon</a></span>	         	
 		         </div>		                  
 	      	</div>
 
