Spelling and Grammar + CV Change

--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@ img {vertical-align: middle;}
    				<img src="images/ProfilePicture.jpg" alt="Profile Picture">
 
    				<p class="lead">My name is Kyle Frost, I have a strong interest in not only games, but how they work. I also enjoy the communities that surround games and have regularly taken part in eSport teams and 
-			events during my time at University. Development communities have been fun to be a part of, and my participation in game jams have allowed me to connect with others 
+			events during my time at University. Development communities have been fun to be a part of, and my participation in game jams has allowed me to connect with others 
 			in a fun and helpful way.</p>
    			</div>   			
 
@@ -246,7 +246,7 @@ img {vertical-align: middle;}
 
    			<h3>Skills</h3>
    			<p>I spent 4 years as a Games Technology student at the University of the West of England (UWE). Throughout my studies, 
-				   I have developed strong Unity/C# skills through various game developments as well as systems creations. I have also developed skills whithin C++ and gained 
+				   I have developed strong Unity/C# skills through various game projects as well as systems creations. I have also developed skills within C++ and gained 
 				   experience with DirectX as well as a custom ASGE engine. I have also amassed knowledge of core systems and fundamentals for games in my Advanced Technologies module.</p>
 
 				<ul class="skill-bars">
@@ -329,7 +329,7 @@ img {vertical-align: middle;}
 	   				</div>
 
 	   				<div class="timeline-header">
-	   					<h3>BTEC Diploma</h3>
+	   					<h3>BTEC Extended Diploma</h3>
 	   					<p>September 2016 - June 2018</p>
 	   				</div>
 
@@ -581,7 +581,7 @@ img {vertical-align: middle;}
 					      <h4>The Descent</h4>		      
 					      <p>A 3-week Game Jam based on a given theme - "A horror game where you explore dungeons full of trolls and loot sweet gear."
 						  <br><br>
-						  This game jam features randomly generated dungeons with varying designed rooms, created so each run will feel unique in it's design.
+						  This game jam features randomly generated dungeons with varying designed rooms, created so each run will feel unique in its design.
 						  Equipped with a bow and elemental arrows, you can take down enemies to spawn randomised loot with power tiers - making you more powerful as
 						  you push through each floor of the dungeon. At the end of each dungeon floor is a boss with unique attacks to provide an extra challenge.
 						  <br><br>
@@ -647,8 +647,8 @@ img {vertical-align: middle;}
 					      <h4>ASGETrek</h4>		      
 					      <p>A C++ remake of classic game "EGA Trek", made using a custom engine (ASGE).
 						  <br><br>
-						  ASGETrek utilises text-based input to control your space ship through a 64 quadrant galaxy. Jump through sectors to find and eliminate Mongol threats to the USS Lexington,
-						  using torpedos to shoot down enemy ships. Manage resources to keep yourself alive, and make use of friendly starships to refill resources. A dynamic notifcation section will 
+						  ASGETrek utilises text-based input to control your spaceship through a 64 quadrant galaxy. Jump through sectors to find and eliminate Mongol threats to the USS Lexington,
+						  using torpedoes to shoot down enemy ships. Manage resources to keep yourself alive, and make use of friendly starships to refill resources. A dynamic notification section will 
 						  alert you to combat and movement information.
 						  <br><br>
 						  <b>C++ Programming</b><br>
@@ -691,7 +691,7 @@ img {vertical-align: middle;}
 
 					   <div class="description-box">
 					      <h4>DirectX FPS</h4>		      
-					      <p>A first person shooter developed in C++ using DirectX.
+					      <p>A first-person shooter developed in C++ using DirectX.
 						  <br><br>
 						  This basic FPS game includes collision detection, billboard enemies and shooting mechanics made from scratch. Cubes are loaded in individually and texture mapped
 						  to create a level, with their positions, and thus the level design, decided using a text file. Collision detection was created by comparing vertex data to create a
@@ -750,11 +750,11 @@ img {vertical-align: middle;}
 						  <p>A 1-week Game Jam for the 2022 Global Game Jam with the theme "Duality".
 						  <br><br>
 						  Using Photon for Unity, this game jam features a functional lobby system, allowing users to create and name rooms to host private games. 
-						  Other players can browse open rooms and join from a list in the menu. The host of the game also has the options to change gamemode and map for that specific game.
+						  Other players can browse open rooms and join from a list in the menu. The host of the game also has the options to change game mode and map for that specific game.
 						  <br><br>
 						  Our FPS game features multiple different weapons, including hitscan and projectile. The weapon system is modular, using Scriptable Objects to manage weapon data, 
-						  created 2 different gamemodes - a typical deathmatch and a "looter-shooter mode", as well as 2 different maps to play on. Weapons models although basic, were created
-						  myself using Unity cubes and emmisive materials to appeal to a futuristic theme.
+						  created 2 different game modes - a typical deathmatch and a "looter-shooter mode", as well as 2 different maps to play on. Weapons models although basic, were created
+						  myself using Unity cubes and emissive materials to appeal to a futuristic theme.
 						  <br><br>
 						  <b>Unity Development / C# Programming</b><br>
 						  <b>Networked Multiplayer - Photon</b><br>
@@ -808,7 +808,7 @@ img {vertical-align: middle;}
 						  The game is local multiplayer, with one player playing as the hacker, and the other as police. The role of the hacker is to hack all 5 terminals
 						  without being detected, whilst the job of the police is to find and eliminate the hacker without harming too many civilians. 
 						  <br><br>
-						  The game scene has many wandering AI to allow the hacker to blend in, and make it harder for the police to track down the hacker. But the terminals will light up when
+						  The game scene has many wandering AIs to allow the hacker to blend in, and make it harder for the police to track down the hacker. But the terminals will light up when
 						  hacked to help the police narrow down their search. Utilising smoke grenades and masking their human movement is important for the hacker to evade, whilst marking innocent 
 						  civilians will allow the police to close in on the hacker.
 						  <br><br>
@@ -871,16 +871,16 @@ img {vertical-align: middle;}
 					      <h4>Kojima Wars</h4>		      
 					      <p>A cohort Unity FPS/RTS game based around the classic game "Herzog Zwei".
 						  <br><br>
-						  Kojima wars is a FPS and RTS hybrid, with mech-based combat including various weapons and abilities to provide players with different playstyle options.
+						  Kojima wars is an FPS and RTS hybrid, with mech-based combat including various weapons and abilities to provide players with different play style options.
 						  The game also features RTS elements, including base capture and defending. These bases earn currency in which you can spend on base defences, or AI units to deploy. A mix
 						  of combat skill and intelligence is important to succeed.
 						  <br><br>
 						  Movement is based around the classic Herzog Zwei game, with the mech able to transform from mech to VTOL, allowing the player to fly around the map and attack bases from
 						  different angles. The rules of the game are classic domination - capture bases to earn points on a ticker, and the team who reaches the score limit first, wins!
 						  <br><br>
-						  Our team, Foundation Games, was in charge of the weapon system and abilities. For this, I developed a modualar weapon system, allowing for the creation of multiple unique weapons with many
+						  Our team, Foundation Games, was in charge of the weapon system and abilities. For this, I developed a modular weapon system, allowing for the creation of multiple unique weapons with many
 						  adjustable stats. Combined with a procedural recoil system, this made gun play feel dynamic and engaging.
-						  Alongside this, I developed a semi-modular skills/ability system, allowing for the creation of skills within 4 classes - Assault, Movement, Defence and Recon - each of which had a distinctive playstyle.
+						  Alongside this, I developed a semi-modular skills/ability system, allowing for the creation of skills within 4 classes - Assault, Movement, Defence, and Recon - each of which had a distinctive play style.
 						  Examples of abilities include an Airstrike, Smoke grenade, Ring of Fire, Decoy Clone, Dash and many more!
 						  <br><br>
 						  <b>Unity Development / C# Programming</b><br>
@@ -948,8 +948,8 @@ img {vertical-align: middle;}
 					      <h4>Unreal Engine Puzzle Platformer</h4>		      
 					      <p>A puzzle game with platforming elements created in Unreal using blueprints for a Level Design assignment.
 						  <br><br>
-						  This game features various puzzles and powerups required to progress through the game, concluding in a time trial sprint back to the start to escape
-						  the collapsing world. Powerups include a double jump, dash and Aether Shroud - a teleport ability to enter the Aether world where paths and puzzle pieces
+						  This game features various puzzles and power ups required to progress through the game, concluding in a time trial sprint back to the start to escape
+						  the collapsing world. Power ups include a double jump, dash, and Aether Shroud - a teleport ability to enter the Aether world where paths and puzzle pieces
 						  reveal themselves.
 						  <br><br>
 						  <b>Unreal Development / Blueprints</b><br>
@@ -1002,7 +1002,7 @@ img {vertical-align: middle;}
 					      <p>An Open World streaming system developed in Unity - loading and unloading mesh data to/from the disk.
 						  <br><br>
 						  This streaming system uses chunks to save and load mesh data to a disk, using player proximity to stream the world data in and out.
-						  Unique mesh data is converted in a serializable data class, then saved to disk using the Unity binary formatter. The data can then be
+						  Unique mesh data is converted to a serializable data class, then saved to disk using the Unity binary formatter. The data can then be
 						  deserialized and converted back to mesh data for Unity to use when needed. 
 						  <br><br>
 						  The project also uses NPCs and quests to gamify the system. NPCs will move to randomised locations around the world, and will also be loaded
@@ -1063,14 +1063,14 @@ img {vertical-align: middle;}
 						  showing an AI learning to pick out an "imposter" based on movement differences. The power to identify irregularities and build suspicion is essential
 						  for social deduction games, and this demo begins to prove that machine learning can be taught this with adjustable levels of accuracy. 
 						  <br><br>
-						  The second scene showing cooperative behaviour between 3 different agents all operating on the same brain. 2 agents must sacrifice themselves on buttons for 
+						  The second scene showing cooperative behaviour between 3 different agents, all operating on the same brain. 2 agents must sacrifice themselves on buttons for 
 						  the last to reach the end goal. Teamwork and cooperation is also a significant skill of social deduction games, and this demo shows that agents can work 
 						  together to complete a common goal. Moreover, it shows that machine learning agents can reliably make decisions based on a changing environment. Despite all agents in this puzzle
 						  sharing the same brain, different agents will press different buttons, proving that each of them understand the goal, regardless of their individual role.
 						  <br><br>
 						  Whilst this project doesn't show a complete AI player, it does set foundations that can be built upon, suggesting the machine learning can be used as a tool for creating
-						  more fun and dynamic AI for games that typically don't use AI due to it's complexity. All of which can be done using a popular game engine, to further support a more 
-						  mainstream use for machine lerning in games.
+						  more fun and dynamic AI for games that typically don't use AI due to its complexity. All of which can be done using a popular game engine, to further support a more 
+						  mainstream use for machine learning in games.
 						  <br><br>
 						  <b>Unity ML Agents</b><br>
 						  <b>Machine Learning for Games AI</b><br>
