Added Portals project

--- a/index.html
+++ b/index.html
@@ -543,6 +543,21 @@
             </div>
           </div>
 
+          <!-- Portals -->
+          <div class="col-lg-4 col-md-6 portfolio-item filter-Unreal filter-Unity">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/Portals.jpg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Unity and Unreal Portals</h4>
+                <p>Unity and Unreal</p>
+                <div class="portfolio-links">
+                  <a href="assets/img/portfolio/Portals.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Portal System application in Unity and Unreal."><i class="bx bx-plus"></i></a>
+                  <a href="Portals-Details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
       </div>
 
     </div>
